# LumiOS

./: .gitignore  Makefile  README.md  README_EN.md  build.sh
android-compat/container/: Makefile
android-compat/container/include/: container.h
android-compat/container/src/: cgroup.c  container.c  main.c  mounts.c  namespace.c  properties.c
devices/generic-arm64/: device.mk  fstab  kernel.config
docs/: BUILD_AND_TEST.md  architecture.md  performance.md  security.md  ui-design.md
scripts/: build-kernel.sh  build-skia.sh  build-vm.sh  extract-kernel.sh  mk-initramfs.sh  test-build.sh  test-portrait.sh  test-vm-x86.sh
system/apps/: Browser-1.0.0.lmpk  Camera-1.0.0.lmpk  Files-1.0.0.lmpk  Messages-1.0.0.lmpk  Phone-1.0.0.lmpk  Settings-1.0.0.lmpk  Terminal-1.0.0.lmpk
system/core/lumi-compositor/: README.md  meson.build
system/core/lumi-compositor/include/: compositor.h
system/core/lumi-compositor/src/: main.c
system/core/lumi-render/: README.md  meson.build
system/core/lumi-render/include/: lumi_render.h
system/core/lumi-render/src/: render.c
system/core/lumi-shell/: README.md  meson.build
system/core/lumi-shell/include/: shell.h
system/core/lumi-toolkit/: README.md  meson.build
system/core/lumi-toolkit/include/: lumi_toolkit.h
system/core/lumi-toolkit/src/: widget.c
system/core/lumid/: Makefile
system/core/sandbox/: Makefile
system/services/audiod/: Makefile
system/services/bluetoothd/: Makefile
system/services/netd/: Makefile  netd.svc
system/services/sensord/: Makefile
system/services/telephonyd/: Makefile
(+51 files in other folders)
